--- a/style.css
+++ b/style.css
@@ -9,9 +9,11 @@
     margin-left: 5px;
 }
 
-.titulo
+.navbar-brand img
 {
-    font-weight: bold;
+    height: 80px;
+    border-radius: 50%;
+    margin-left: 15px;
 }
 .nav-bar .nav-link
 {
@@ -27,8 +29,59 @@
     background-color: rgb(102, 198, 230)!important;
 }
 /*seccion inicio*/
-.hero-img
+.hero
 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    background: url(./assets/hero.jpg);
+    height: 500px;
+    background-size: cover;
+}
+
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 500px;
     width: 100%;
-    object-fit: cover;
+    background-color: rgba(0, 0, 0, 0.5); /* oscurece el fondo */
+}
+.hero h1
+{
+    font-size: 3rem;
+    color: white;
+    background-color: rgba(44, 62,80,.6);
+    padding: 5px 10px;
+    border-radius: 15px;
+    margin-bottom: 10px;
+    text-align: center;
+    z-index: 2;
+}
+.hero h2
+{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: #2c3e60;
+    background-color: rgba(255,255,255,0.5);
+    padding: 5px 10px;
+    border-radius: 10px;
+    margin-bottom: 80px;
+    text-align: center;
+    z-index: 2;
+}
+.hero a
+{
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: white;
+    background-color: #2c3e50;
+    padding: 9px 15px;
+    border-radius: 15px;
+    z-index: 2;
 }
