--- a/style.css
+++ b/style.css
@@ -243,3 +243,39 @@
     height: 200px;
     object-fit: cover;
 }
+/*contactos*/
+.contacto
+{
+    padding: 2rem;
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+}  
+.contacto h2
+{
+    margin-bottom: 60px;
+} 
+.contacto .redes-sociales
+{
+    list-style: none;
+    margin-top: 30px;
+}
+.contacto li a {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #f0f0f0;
+    transition: background-color 0.3s, transform 0.3s;
+    text-decoration: none;
+    color: #000;
+    font-size: 80px;
+    margin-bottom: 70px;
+}
+
+.contacto li a:hover {
+    background-color: #e0e0e0;
+    transform: scale(1.05);
+}
